test/files/neg/t4584.check
t4584.scala:1: error: illegal start of simple pattern
class A { val \u2
                 ^
one error found
